Revert "Vue: fix floating help text collision issue"
This reverts commit de2708c4587b5a5cd901708021420b288606bda1.

Reason for revert: caused the top header covers the modal top part

--- a/packages/cmk-frontend/src/themes/facelift/scss/_page_menu.scss
+++ b/packages/cmk-frontend/src/themes/facelift/scss/_page_menu.scss
@@ -33,7 +33,6 @@ div.success {
 div#top_heading {
   width: 100%;
   padding: 0;
-  z-index: 1;
   div.titlebar {
     display: flex;
     height: 53px;
